# ClipVessel

./: CMakeLists.txt  ClipVessel.ext  README.md
ClipVessel/: CMakeLists.txt  ClipVessel.py
ClipVessel/Resources/UI/: ClipVessel.ui
